@@ -7,7 +7,11 @@ import com.pickpick.message.application.MessageService;
 import com.pickpick.message.ui.dto.MessageRequest;
 import com.pickpick.message.ui.dto.MessageResponse;
 import com.pickpick.message.ui.dto.MessageResponses;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.LongStream;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -27,6 +31,8 @@ import org.springframework.util.StringUtils;
 @SpringBootTest
 class MessageServiceTest {
 
+    private static final long MEMBER_ID = 1L;
+
     private final MessageService messageService;
 
     public MessageServiceTest(final MessageService messageService) {
@@ -37,14 +43,27 @@ class MessageServiceTest {
         return Stream.of(
                 Arguments.of(
                         "5번 채널에서 메시지ID가 1인 메시지 이후에 작성된 메시지 7개 조회",
-                        getSlackMessageRequest(),
-                        List.of(8L, 7L, 6L, 5L, 4L, 3L, 2L),
+                        new MessageRequest("", "", List.of(5L), false, 1L, 7),
+                        createExpectedMessageIds(8L, 2L),
+                        false),
+                Arguments.of(
+                        "쿼리 파라미터가 전혀 전달되지 않았을 경우, 회원의 채널 정렬 상 첫번째 채널의 최신 20개 메시지를 작성시간 내림차순으로 응답해야 한다.",
+                        new MessageRequest("", "", Collections.emptyList(), true, null, 20),
+                        createExpectedMessageIds(38L, 19L),
+                        false),
+                Arguments.of(
+                        "쿼리 파라미터가 전혀 전달되지 않았을 경우, 회원의 채널 정렬 상 첫번째 채널의 최신 20개 메시지를 작성시간 내림차순으로 응답해야 한다.",
+                        new MessageRequest("", "", null, true, null, 20),
+                        createExpectedMessageIds(38L, 19L),
                         false)
         );
     }
 
-    private static MessageRequest getSlackMessageRequest() {
-        return new MessageRequest("", "", List.of(5L), false, 1L, 7);
+    private static List<Long> createExpectedMessageIds(final long startInclusive, final long endInclusive) {
+        return LongStream.rangeClosed(endInclusive, startInclusive)
+                .boxed()
+                .sorted(Comparator.reverseOrder())
+                .collect(Collectors.toList());
     }
 
     @DisplayName("메시지 조회 요청에 따른 메시지가 응답된다")
@@ -54,7 +73,7 @@ class MessageServiceTest {
             final String description, final MessageRequest messageRequest,
             final List<Long> expectedMessageIds, final boolean expectedLast) {
         // given
-        MessageResponses messageResponses = messageService.find(messageRequest);
+        MessageResponses messageResponses = messageService.find(MEMBER_ID, messageRequest);
 
         // when
         List<MessageResponse> messages = messageResponses.getMessages();
@@ -74,7 +93,7 @@ class MessageServiceTest {
         MessageRequest messageRequest = new MessageRequest("", "", List.of(5L), true, null, 200);
 
         // when
-        MessageResponses messageResponses = messageService.find(messageRequest);
+        MessageResponses messageResponses = messageService.find(MEMBER_ID, messageRequest);
         List<MessageResponse> messages = messageResponses.getMessages();
         boolean hasEmptyMessageResponse = messages.stream()
                 .anyMatch(message -> !StringUtils.hasText(message.getText()));
